After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 171180 - Dragging to address field should replace current contents
Dragging to address field should replace current contents
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: Controls
git master
Other All
: Normal minor
: ---
Assigned To: Epiphany Maintainers
Marco Pesenti Gritti
polish
Depends on:
Blocks:
 
 
Reported: 2005-03-22 07:41 UTC by Matthew Paul Thomas (mpt)
Modified: 2013-12-16 16:58 UTC
See Also:
GNOME target: ---
GNOME version: 2.17/2.18


Attachments
Make dropping of URL:s and text in Epiphany's location entry better (4.81 KB, patch)
2006-11-17 15:22 UTC, Björn Lindqvist
needs-work Details | Review
Handle URL:s dropped in the location entry, attempt 2 (4.64 KB, patch)
2006-12-06 04:55 UTC, Björn Lindqvist
needs-work Details | Review
Make text and URLs dropped in location entry clear entry and load new URL (3.87 KB, patch)
2013-12-13 16:57 UTC, William Jon McCann
needs-work Details | Review
Make text and URLs dropped in location entry clear entry and load new URL (3.81 KB, patch)
2013-12-13 18:25 UTC, William Jon McCann
committed Details | Review

Description Matthew Paul Thomas (mpt) 2005-03-22 07:41:59 UTC
Steps to reproduce:
1.  Drag an URL to the address field.

What should happen:
*   The URL you are dragging replaces the current contents of the address field.

What actually happens:
*   http://foo.examhttp://bar.example.net/thisisnotwhatiwant.htmlple.com/

Other information:
Comment 1 Reinout van Schouwen 2005-03-23 01:24:43 UTC
I do agree but I'm afraid it's something with the way GTK handles DnD text.
Comment 2 Reinout van Schouwen 2006-01-29 01:45:20 UTC
Can this problem be addressed in GTK? If not, I suggest to mark this WONTFIX.
Comment 3 Matthew Paul Thomas (mpt) 2006-01-29 02:13:54 UTC
With respect, that doesn't make any sense. Whether it's desirable behavior for a Web browser is independent of what that browser is made of.
Comment 4 Matthias Clasen 2006-01-29 03:54:05 UTC
to fix this, the location entry must accept drops of urls and handle them differently from mere drops of text.
Comment 5 Reinout van Schouwen 2006-01-30 16:30:36 UTC
OK,updating version fields then.
Comment 6 Björn Lindqvist 2006-11-17 15:20:19 UTC
Here is a patch for this. With the patch, dropping text and URL:s to the address field works like this:

1. Select some text and drag it to the address field.
2. The contents of the address field is replaced with the selected text.

1. Select an URL an drag it to the address field.
2. The contents of the address field is replaced with the selected URL and that URL is loaded.

This copies how Firefox handles selected text and URL:s. I think replacing the address fields text is much saner than inserting or appending the selected text or URL.

I've added a function loc_entry_drag_data_received_cb() to ephy-location-action.c that works almost exactly like notebook_drag_data_received_cb() in ephy-notebook.c. In fact, the two handlers are so similar that it should be easy to merge the both code paths. I wasn't sure were the "setup" code for the signal handler should be placed, so I added it to the connect_proxy() and ephy_location_entry_construct_contents() functions. It probably needs to be done better.
Comment 7 Björn Lindqvist 2006-11-17 15:22:50 UTC
Created attachment 76766 [details] [review]
Make dropping of URL:s and text in Epiphany's location entry better
Comment 8 Christian Persch 2006-11-17 15:48:57 UTC
Thanks for the patch.

Does selecting text (not an URL link) in the web page and dragging it to the location entry still work with the patch?
Comment 9 Björn Lindqvist 2006-11-17 16:40:36 UTC
Yes, kind of. Current Epiphany behaviour is if the location entry contains "www.google.com" and you drag the text "foobar" and you place it after "www." the location entry text becomes "www.foobargoogle.com". With the patch, it works like Firefox -- "foobar" will replace "www.google.com". 


Comment 10 Christian Persch 2006-11-23 17:45:28 UTC
I'm undecided on this; while it's fine to replace when an URL is dragged, I'm not sure it's right when just text is dragged...
Comment 11 Björn Lindqvist 2006-11-24 14:03:02 UTC
Right, I can change that. It is the dragging of URL:s that are the really broken thing. The use case for replacing the text in the location bar is if you want to search for it. For example, you could drag say "undefined reference to `ldap_err2string'" to the location bar, click Go to google-search for it. On the other hand, the URL could be "http://en.wikipedia.org" and you want the dragged text "/wiki/Epiphany" to be appended to that so that you can visit that wiki page.
Comment 12 Christian Persch 2006-12-04 22:11:55 UTC
Yes, I think it's better to only do this for URI drags.
Comment 13 Diego Escalante Urrelo (not reading bugmail) 2006-12-04 22:16:09 UTC
Agree with chpe, replacing the location entry content should happen only if the dragged data is a URI.
Comment 14 Björn Lindqvist 2006-12-06 04:55:31 UTC
Created attachment 77782 [details] [review]
Handle URL:s dropped in the location entry, attempt 2

Alright, I've updated the patch per your request. Dragging text should work as it did before now. I had to change entry_drag_drop_cb so that it always stops signal emission. I have no idea why that was needed.. but it works. :)
Comment 15 Christian Persch 2007-01-08 22:44:12 UTC
> Dragging text should work as it did before now. I had to change 
> entry_drag_drop_cb so that it always stops
> signal emission. I have no idea why that was needed.. but it works. :)

Hmm that makes me a bit nervous... :)

+	gtk_drag_dest_set (priv->icon_entry->entry,
+			   GTK_DEST_DEFAULT_MOTION | GTK_DEST_DEFAULT_DROP,
+			   url_drag_types,
+			   G_N_ELEMENTS (url_drag_types),
+			   GDK_ACTION_MOVE | GDK_ACTION_COPY);

Shouldn't this use gtk_drag_dest_get_target_list to get the stock list (containing the text targets) and append (or prepend??) the url_drag_types, then use gtk_drag_dest_set_target_list () (and unref the list[?]) ?
Comment 16 Christian Persch 2007-01-29 21:46:26 UTC
Marking needs-work, see comment 15.
Comment 17 Reinout van Schouwen 2007-01-30 09:45:45 UTC
updating version
Comment 18 Cyril Brulebois 2007-09-07 04:59:05 UTC
I'm willing to work on it, will do soon (you know I'm new to Epiphany, but I'm even newer to D'n'D).
Comment 19 William Jon McCann 2013-12-13 15:12:17 UTC
Still an issue.
Comment 20 William Jon McCann 2013-12-13 16:57:39 UTC
Created attachment 264159 [details] [review]
Make text and URLs dropped in location entry clear entry and load new URL
Comment 21 Bastien Nocera 2013-12-13 17:04:39 UTC
Review of attachment 264159 [details] [review]:

::: src/ephy-location-controller.c
@@ +166,3 @@
+
+		/* URL_TYPE has format: url \n title */
+		split = g_strsplit ((const gchar *)sel_data, "\n", 2);

Use g_uri_list_extract_uris() instead?

@@ +168,3 @@
+		split = g_strsplit ((const gchar *)sel_data, "\n", 2);
+		if (split != NULL && split[0] != NULL &&
+		    split[0][0] != '\0')

If you used g_uri_list_extract_uris() I think this code would get removed, but *split[0] is more readable than split[0][0].
Comment 22 William Jon McCann 2013-12-13 18:25:15 UTC
Created attachment 264163 [details] [review]
Make text and URLs dropped in location entry clear entry and load new URL
Comment 23 Gustavo Noronha (kov) 2013-12-16 15:09:49 UTC
Review of attachment 264163 [details] [review]:

LGTM

::: src/ephy-location-controller.c
@@ +177,3 @@
+	} else if (gtk_selection_data_get_target (selection_data) == text_type) {
+		gtk_entry_set_text (entry, (const gchar *)sel_data);
+		ephy_link_open (EPHY_LINK (controller),

Hmm, shouldn't we use the default behaviour for non-URL text drops? I tend to think dragging text in a URL field is mostly a mistake unless you drag a full URL, in any case.
Comment 24 William Jon McCann 2013-12-16 15:17:46 UTC
Since the URL field is also the search field I thought it made sense to allow text drops to a) load if they are in URL form b) initiate a search if they are not.