Make text and URLs dropped in location entry clear entry and load new URL

https://bugzilla.gnome.org/show_bug.cgi?id=171180